fix: split propertybuilder and array handling
Signed-off-by: flavono123 <flavono123@gmail.com>

--- a/.air.toml
+++ b/.air.toml
@@ -1,5 +1,6 @@
 tmp_dir = "./bin"
 
 [build]
-bin = "bin/kupid-dev"
-cmd = "go build -o bin/kupid cmd/kupid/main.go"
+bin = "bin/kupid"
+cmd = "make build-debug"
+full_bin = "dlv exec ./bin/kupid --listen=:2345 --headless=true --api-version=2 --accept-multiclient"
