chore(main): ammend prelease version and changelog
Signed-off-by: flavono123 <flavono123@gmail.com>

--- a/.github/workflows/bump.yaml
+++ b/.github/workflows/bump.yaml
@@ -9,6 +9,7 @@ permissions:
   contents: write
   pull-requests: write
 
+# TODO: set pr branch name pattern as release/${version}
 jobs:
   release-please:
     runs-on: ubuntu-latest
