ci: mannual bump test
Signed-off-by: flavono123 <flavono123@gmail.com>

--- a/.github/workflows/bump.yaml
+++ b/.github/workflows/bump.yaml
@@ -18,3 +18,12 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           release-type: simple
+          changelog-notes: |
+            # Changelog
+
+            ## 0.0.1 (2025-01-01)
+
+            ### Features & Bug Fixes
+
+            on the alpha stage would not be specified in detail
+            maybe commits are also squashed in later.
