--- a/release-please-config.json
+++ b/release-please-config.json
@@ -5,7 +5,8 @@
       "bump-minor-pre-major": false,
       "bump-patch-for-minor-pre-major": false,
       "draft": false,
-      "prerelease": false
+      "prerelease": true,
+      "prerelease-type": "alpha"
     }
   },
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
