--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,7 +4,9 @@
       "changelog-path": "CHANGELOG.md",
       "bump-minor-pre-major": false,
       "bump-patch-for-minor-pre-major": false,
-      "draft": false
+      "draft": false,
+      "prerelease": true,
+      "prerelease-type": "alpha"
     }
   },
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
