--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,12 +1,13 @@
 {
   "packages": {
     ".": {
+      "bump-minor-pre-major": true,
+      "bump-patch-for-minor-pre-major": true,
       "changelog-path": "CHANGELOG.md",
-      "bump-minor-pre-major": false,
-      "bump-patch-for-minor-pre-major": false,
       "draft": false,
+      "prerelease-type": "alpha",
       "prerelease": true,
-      "prerelease-type": "alpha"
+      "release-type": "go"
     }
   },
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
