ci: fix short desc for krew
Signed-off-by: flavono123 <flavono123@gmail.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -29,6 +29,8 @@ krews:
     homepage: "https://github.com/flavono123/kupid"
     description: |-
       Pick any Deep schema fields, create your own table view of Kubernetes TUI.
+    short_description: |-
+      Pick any Deep schema fields, create your own table view of Kubernetes TUI.
     repository:
       owner: flavono123
       name: flew
