--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -27,6 +27,7 @@ brews:
     - kupid
     commit_msg_template: "Brew formula update for {{ .ProjectName }} version {{ .Tag }}"
     homepage: https://github.com/flavono123/kupid
+    goarm: 8
     description: |-
       Pick any Deep schema fields, create your own table view of Kubernetes TUI.
     install: |
