--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,5 +16,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version-file: .go-version
+      - name: Install Ginkgo
+        run: go install github.com/onsi/ginkgo/v2/ginkgo@latest
       - name: Run tests
-        run: go test -v ./...
+        run: ginkgo -r -v
