chore: update .gitignore for Wails dev files and macOS
- Ignore *.md5 files (Wails package.json checksums)
- Ignore context-gallery-preview.html (design artifact)
- Ignore .DS_Store (macOS filesystem metadata)

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@
 
 # Planning and analysis documents
 /planning
+
+# Wails
+*.md5
+cmd/gui/frontend/context-gallery-preview.html
+
+# macOS
+.DS_Store
