--- a/.github/workflows/deploy-website.yaml
+++ b/.github/workflows/deploy-website.yaml
@@ -23,6 +23,8 @@ jobs:
         uses: withastro/action@v5
         with:
           path: ./website
+        env:
+          GITHUB_PAGES: 'true'
 
   deploy:
     needs: build
