--- a/.golangci.yml
+++ b/.golangci.yml
@@ -18,7 +18,7 @@ linters-settings:
 
 issues:
   exclude-dirs:
-    - cmd/gui/frontend
+    - cmd/gui
   exclude-rules:
     - path: _test\.go
       linters:
