--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,6 +26,7 @@ jobs:
         with:
           version: latest
           install-mode: goinstall
+          args: --skip-dirs=cmd/gui
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
