--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,7 +26,7 @@ jobs:
         with:
           version: latest
           install-mode: goinstall
-          args: --skip-dirs=cmd/gui
+          args: ./internal/... ./cmd/kupid/...
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
